--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:alpine
+
+MAINTAINER Parvaze <parvaze.mdmasud@gmail.com>
+
 ADD nginx/default.conf /etc/nginx/conf.d
+
 ADD nginx/fastcgi-php.conf /etc/nginx
